--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.5
   fl_chart: ^0.62.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
